# compgraph

./: .gitignore  README.md  main.py  task1.py  task3.py
lab-02/: README.md  main.py  task1.py  task2.py
lab-03/: README.md  main.py  task1.py  task2.py  task3.py
lab-04/: main.py  readme.md
lab-05/: main.py  task_2.py  task_3.py
lab-05/Lsys/: Makefile  fractal_generator
lab-05/Lsys/lib/: lsystem.cpp  lsystem.h
lab-05/Lsys/rules/: dragon  koch  tree
lab-05/Lsys/src/: main.cpp
lab-06/: CMakeLists.txt  how_start.txt  lab6  main.cpp  readme.md
lab-07/: CMakeLists.txt  Makefile  TESTING.md  how_start.txt  lab7  main.cpp  readme.md
lab-07/lib/: geometry.cpp  geometry.h  math_3d.cpp  math_3d.h  renderer.h
lab-08/: main  main.cpp  readme.md
lab-08/lib/: camera.h  geometry.cpp  geometry.h  math_3d.cpp  math_3d.h  renderer.h  zbuffer.h
lab-09/: main.cpp  readme.md
lab-09/lib/: geometry.cpp  geometry.h  math_3d.cpp  math_3d.h  renderer.h  zbuffer.h
lab-10/androsov/: main.cpp  readme.md
lab-10/gorbanev/: CMakeLists.txt  Makefile  README.md  main.cpp
lab-10/strigin/: Makefile  main  main.cpp  readme.md
lab-11/: main.cpp  readme.md
lab-12/: Makefile  README.md  main.cpp
lab-13/: main  main.cpp  makefile
